name: {{projectName}}
version: 0.1.0.0
synopsis: {{synopsis}}
-- Description
license: MIT
license-file: LICENSE
author: {{author}}
maintainer: {{mail}}
-- Copyright
category: Development
build-type: Simple
-- extra-source-files
-- data-files
cabal-version: >=1.10
executable {{moduleName}}
  main-is: Main.hs
  --other-modules
  --other-extensions
  build-depends: base >=4.6
  hs-source-dirs: src
  ghc-options: -Wall
  default-language: Haskell2010

